fix: restore overflow y axis in tbody

--- a/packages/ui/styles.scss
+++ b/packages/ui/styles.scss
@@ -205,6 +205,7 @@ article{
     tbody{
         // height: 500px;
         
+        overflow-y: scroll;
         display: flex;
         flex-direction: column;
         width: 100%;
